<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Information"
    android:gravity="center"

    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/linear3"
    android:orientation="vertical"
    tools:ignore="UseCompoundDrawables">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_profile"
        android:textSize="30sp"
        android:layout_gravity="center"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_person_black_24dp"
        android:layout_gravity="center"

        tools:ignore="ContentDescription" />


</LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputlayout3"
        android:layout_below="@id/linear3"
        android:textColorHint="#000"
        android:textColor="#000"
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameEdTxt2"
            android:hint="@string/create_name"
            android:gravity="center"
            android:inputType="text"

            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputlayout4"
        android:layout_below="@id/inputlayout3"
        android:textColorHint="#000"
        android:textColor="#000"


        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mobileEdTxt1"
            android:hint="@string/enter_mobile"
            android:gravity="center"
            android:inputType="number"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputlayout5"
        android:layout_below="@id/inputlayout4"
        app:passwordToggleEnabled="true"
        android:textColorHint="#000"
        android:textColor="#000"
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordEdTxt2"
            android:hint="@string/create_password"
            android:gravity="center"
            android:inputType="textPassword"

            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_format"
        android:layout_below="@id/inputlayout5"
        android:layout_alignParentEnd="true"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:id="@+id/btnNxt"
        />


</RelativeLayout>