<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:gravity="center"
    android:background="@color/colorPrimary"
    >

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/logo_name"
            android:textSize="30sp"
            android:textColor="#ffffff"
            android:textStyle="italic"

            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/kuku"
            app:civ_border_color="#ffffff"
            app:civ_border_width="10dp"
            />
    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear1"
        android:textColorHint="#ffffff"
        android:textColor="@android:color/white"
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/user_name_edt"
            android:id="@+id/userNameEdTxt"
            android:inputType="text"
            android:textColor="#ffffff"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputlayout1"
        app:passwordToggleEnabled="true"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/passwordEdTxt"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/password_edit"
            android:textColor="#ffffff"
            />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputlayout2"
        android:paddingTop="10dp"
        android:orientation="vertical"
        android:id="@+id/linear2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_format"
            android:layout_gravity="center"
            android:id="@+id/signInBtn"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="#ffffff"

            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account1"
        android:id="@+id/createAccountBtn"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:layout_below="@id/linear2"
        android:layout_marginStart="10dp"
        android:textColor="#ffffff"
        android:onClick="goInformation"
        android:textStyle="italic"
        />


</RelativeLayout>